veil-tests/src/compile_tests/fail/redact_all_with_value.rs
fn main() {}

#[derive(veil::Redact)]
#[redact(all = "ASDF")]
struct Foos {
    bar: String,
}
